syntax = "proto3";
package Services_pb;
//option  go_package = "./protobufs";//设置go包的可选项
import "Models.proto";
// go get github.com/favadi/protoc-go-inject-tag

message ProdRequest {
    // @inject_tag: json:"size", form:"size"
    int32 Size = 1;
    // @inject_tag: uri:"pid"
    int32 prod_id = 2;
}

message ProdListResponse {
    repeated ProdModel data = 1;
}

message ProdDetailResponse {
    ProdModel data = 1;
}

service ProdService {
    rpc GetProdList (ProdRequest) returns (ProdListResponse);
    rpc GetProdDetail (ProdRequest) returns (ProdDetailResponse);
}